--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="title"><span class="titlepoint"></span><span class="title-text">BLUMENHAUS LOGO (RE)DESIGN</span></div>
     <div class="content">
         <div class="subtitle">(creative coding) (typography) (illustration) (branding)</div>
-        <a href="https://kandd871.github.io/logo-redesign/" target="_blank"><img class="first" src="imgs/blumenhaus/webcropped.gif"></a>
+        <a href="https://kandd871.github.io/logo-redesign/" target="_blank"><img class="first hover" src="imgs/blumenhaus/webcropped.gif"></a>
         <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
         <div class="caption"><a href="https://kandd871.github.io/logo-redesign/" target="_blank">See it Blooming Live! ↗</a></div>
@@ -200,7 +200,7 @@
         <div class="title"><span class="titlepoint"></span><span class="title-text">CHAMBERLAIN COFFEE DATA-DRIVEN PACKAGING</span></div>
         <div class="content">
         <div class="subtitle">(creative coding) (branding) (illustration) (web design)</div>
-        <a href="https://kandd871.github.io/chamberlain-generator/" target="_blank"><img class= "first" src="imgs/chamberlain/1.png"></a>
+        <a href="https://kandd871.github.io/chamberlain-generator/" target="_blank"><img class= "first hover" src="imgs/chamberlain/1.png"></a>
         <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
         <div class="caption"><a href="https://kandd871.github.io/chamberlain-generator/" target="_blank">Make your own Blend! ↗</a></div>
@@ -263,7 +263,7 @@
     <div class="title"><span class="titlepoint"></span><span class="title-text">STARDEW TYPEFACE</span></div>
 <div class="content">
     <div class="subtitle">(type design) (creative coding) (web design)</div>
-    <a href="https://kandd871.github.io/stardew/" target="_blank"><img class= "first" src="imgs/stardew/webcrop.gif"></a>
+    <a href="https://kandd871.github.io/stardew/" target="_blank"><img class= "first hover" src="imgs/stardew/webcrop.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it out! ↗</a></div>
@@ -342,7 +342,7 @@
     <div class="title"><span class="titlepoint"></span><span class="title-text">THE MET COMMUNITY DRIVEN DESIGN</span></div>
 <div class="content">
     <div class="subtitle">(creative coding) (type design) (branding) (web design) (exhibition design)</div>
-    <a href="https://kandd871.github.io/exhibition/" target="_blank"><img class= "first" src="imgs/weaving/billboard.png"></a>
+    <a href="https://kandd871.github.io/exhibition/" target="_blank"><img class= "first hover" src="imgs/weaving/billboard.png"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></div>
@@ -478,7 +478,7 @@
     <div class="title"><span class="titlepoint"></span><span class="title-text">EXPLORING ESCAPISM PT. 1 – The MacBOOK</span></div>
 <div class="content">
     <div class="subtitle">(print design) (web design) (creative coding) (bookbinding)</div>
-    <a href="https://kandd871.github.io/escapism-github.io/" target="_blank"><img class= "first" src="imgs/escapism1/escapism1.gif"></a>
+    <a href="https://kandd871.github.io/escapism-github.io/" target="_blank"><img class= "first hover" src="imgs/escapism1/escapism1.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank">Visit the Website ↗</a></div>
@@ -522,8 +522,8 @@
     <div class="subtitle">(creative coding) (web design) (print design) (typography)</div>
     <a href="https://kandd871.github.io/touchsomegrass/" target="_blank">
         <div class="first background">
-            <img class="fullwidth" src="imgs/escapism2/bg.png">
-            <img class="second border" src="imgs/escapism2/1.gif">
+            <img class="fullwidth hover" src="imgs/escapism2/bg.png">
+            <img class="second border hover" src="imgs/escapism2/1.gif">
         </div>        
     </a>
     <button class="expand">[SHOW DETAILS]</button>
