--- a/index.html
+++ b/index.html
@@ -485,7 +485,10 @@
     <div class="title"><span class="titlepoint"></span><span class="title-text">MUTATED ODYSSEY</span></div>
 <div class="content">
     <div class="subtitle">(print design) (typography) (branding) (bookbinding)</div>
-    <img class= "first" src="imgs/mutated/cover.gif">
+    <div class="first two">
+        <img id="cover1" src="imgs/mutated/cover.gif">
+        <img id="cover2" src="imgs/mutated/cover.gif">
+    </div>
     <!-- <button class="expand">[SHOW DETAILS]</button> -->
     <div class = "info">
     <div class="caption">(includes 4.5 x 10.5 in. catalog)</div>
