--- a/index.html
+++ b/index.html
@@ -433,14 +433,15 @@
         <img src="imgs/stardew/12.png">
     </div>
 
-    <img class="fullwidth" src="imgs/stardew/posters.png">
 
     <div class="twocol eight">
         <img src="imgs/stardew/14.png">
         <img src="imgs/stardew/15.png">
     </div>
 
-    <img class="fullwidth" class="last" src="imgs/stardew/16.png">
+    <img class="fullwidth" src="imgs/stardew/16.png">
+
+    <img class="fullwidth last" src="imgs/stardew/posters.png">
     <!-- <button class="close">[HIDE DETAILS]</button> -->
 </div>
 </div>
