--- a/index.html
+++ b/index.html
@@ -487,9 +487,13 @@
 <div class="content">
     <div class="subtitle">(print design) (typography) (branding) (bookbinding)</div>
     <div class="first two">
-        <img id="cover1" src="imgs/mutated/cover.gif">
         <img id="cover2" src="imgs/mutated/cover.gif">
+        <img id="cover1" src="imgs/mutated/cover.gif">
     </div>
+    <!-- <div class="two">
+    <img id="cover2" src="imgs/mutated/cover.gif">
+        <img id="cover1" src="imgs/mutated/cover.gif">
+    </div> -->
     <!-- <button class="expand">[SHOW DETAILS]</button> -->
     <div class = "info">
     <div class="caption">(includes 4.5 x 10.5 in. catalog)</div>
