--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <br>
     <div id="linkcontainer">
     <div class="linkcontainer">
-    <a href="mailto:drithi.rajesh@gmail.com"><div class="linkpoints"></div></a>
+    <a href="mailto:drithikandoor@gmail.com"><div class="linkpoints"></div></a>
     <br>
-    <a href="mailto:drithi.rajesh@gmail.com">(Email)</a>
+    <a href="mailto:drithikandoor@gmail.com">(Email)</a>
     </div>
     <div class="linkcontainer">
     <a href="https://www.instagram.com/drithii" target="_blank"><div class="linkpoints"></div></a>
@@ -115,9 +115,9 @@
         <br>
         <div id="linkcontainer">
         <div class="linkcontainer">
-        <a href="mailto:drithi.rajesh@gmail.com"><div class="linkpoints"></div></a>
+        <a href="mailto:drithikandoor@gmail.com"><div class="linkpoints"></div></a>
         <br>
-        <a href="mailto:drithi.rajesh@gmail.com">(Email)</a>
+        <a href="mailto:drithikandoor@gmail.com">(Email)</a>
         </div>
         <div class="linkcontainer">
         <a href="https://www.instagram.com/drithii" target="_blank"><div class="linkpoints"></div></a>
