--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <a href="mailto:drithikandoor@gmail.com">(Email)</a>
     </div>
     <div class="linkcontainer">
-    <a href="https://www.instagram.com/drithii" target="_blank"><div class="linkpoints"></div></a>
+    <a href="https://www.instagram.com/drithibyart" target="_blank"><div class="linkpoints"></div></a>
     <br>
-    <a href="https://www.instagram.com/drithii" target="_blank">(Instagram)</a>
+    <a href="https://www.instagram.com/drithibyart" target="_blank">(Instagram)</a>
     </div>
     <div class="linkcontainer">
     <a href="https://www.linkedin.com/in/drithi-kandoor-512229253/" target="_blank"> <div class="linkpoints"></div></a>
@@ -120,9 +120,9 @@
         <a href="mailto:drithikandoor@gmail.com">(Email)</a>
         </div>
         <div class="linkcontainer">
-        <a href="https://www.instagram.com/drithii" target="_blank"><div class="linkpoints"></div></a>
+        <a href="https://www.instagram.com/drithibyart" target="_blank"><div class="linkpoints"></div></a>
         <br>
-        <a href="https://www.instagram.com/drithii" target="_blank">(Instagram)</a>
+        <a href="https://www.instagram.com/drithibyart" target="_blank">(Instagram)</a>
         </div>
         <div class="linkcontainer">
         <a href="https://www.linkedin.com/in/drithi-kandoor-512229253/" target="_blank"> <div class="linkpoints"></div></a>
