--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 <div class="footer"></div>
 </div>
 <div class="copyright">
-    <span id="copy">All work on this site © Drithi Kandoor 2024</span>
+    <span id="copy">ALL WORK ON SITE © Drithi Kandoor 2024, drithikandoor@gmail.com</span>
 </div>
 <script src="main.js"></script>
 </body>
