media queries archive

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <div id="about">
-    <p id="drithi">
+    <p class="drithi">
     DRITHI KANDOOR is <span class="skills">a <br><span class="skill-text">graphic designer</span></span><br>
     from Bangalore & <br>based in New York City.
     </p>
     <br>
-    <p id="main-text">
+    <p class="main-text">
     Currently a rising senior in the BFA Communication Design program at Parsons School of Design,  her work largely revolves around exploring how interaction influences the digital narrative. 
     She is interested in breaking boundaries & creating non-traditional work using trial & error with experimentation through code, typography, bold colors, texture, perspective, & more.
     </p> 
@@ -103,17 +103,17 @@
 </div>
 <div id="projects-section">
     <div id="about2">
-        <p id="drithi">
+        <p class="drithi">
         DRITHI KANDOOR is <span class="skills">a <br><span class="skill-text">graphic designer</span></span><br>
         from Bangalore & <br>based in New York City.
         </p>
         <br>
-        <p id="main-text">
+        <p class="main-text">
         Currently a rising senior in the BFA Communication Design program at Parsons School of Design,  her work largely revolves around exploring how interaction influences the digital narrative. 
         She is interested in breaking boundaries & creating non-traditional work using trial & error with experimentation through code, typography, bold colors, texture, perspective, & more.
         </p> 
         <br>
-        <div id="linkcontainer">
+        <div id="linkcontainer2">
         <div class="linkcontainer">
         <a href="mailto:drithikandoor@gmail.com"><div class="linkpoints"></div></a>
         <br>
