--- a/index.html
+++ b/index.html
@@ -257,7 +257,6 @@
             <img id="blum-web2" src="imgs/blumenhaus/99.png">
         </div>
         <img class="fullwidth" id="blum-stack1" src="imgs/blumenhaus/2.png">
-        <img class="fullwidth" id="blum-stack2" src="imgs/blumenhaus/3.png">
         <div class="threecol">
             <img id="blum1" src="imgs/blumenhaus/blum1.png">
             <img id="blum2" src="imgs/blumenhaus/blum2.png">
@@ -269,8 +268,9 @@
             <img src="imgs/blumenhaus/cover.png">
         </div>
         <img class="fullwidth" id="blum-laptop" src="imgs/blumenhaus/laptop.gif">
-        <img class="fullwidth" id="blum-icons" src="imgs/blumenhaus/8.png">
-        <img class="fullwidth" id="blum-code" src="imgs/blumenhaus/10.png">
+        <img class="fullwidth" id="blum-stack2" src="imgs/blumenhaus/3.png">
+        <img class="fullwidth last" id="blum-icons" src="imgs/blumenhaus/8.png">
+        <!-- <img class="fullwidth" id="blum-code" src="imgs/blumenhaus/10.png"> -->
         <!-- <button class="close">[HIDE DETAILS]</button> -->
     </div>
     </div>
@@ -302,10 +302,11 @@
     </div>
 
     <img class="fullwidth border" src="imgs/weaving/web.gif">
-    <div class="twocol five">
+    <!-- <div class="twocol five">
         <img src="imgs/weaving/data.png">
         <img src="imgs/weaving/11.png">
-    </div>
+    </div> -->
+    <img class="fullwidth" src="imgs/weaving/data.png">
     <img class="fullwidth" src="imgs/weaving/onsite2.gif">
     
     <div class="twocol">
