--- a/index.html
+++ b/index.html
@@ -252,10 +252,11 @@
         </div>
         <div class="logo"><img id="newlogo" src="imgs/blumenhaus/newlogo.png"></div><br><br>
         <img id="illustrations" class="fullwidth" src="imgs/blumenhaus/1.png">
-        <div class="twocolweb">
+        <!-- <div class="twocolweb">
             <img id="blum-web1" src="imgs/blumenhaus/9.png">
             <img id="blum-web2" src="imgs/blumenhaus/99.png">
-        </div>
+        </div> -->
+        <img class="fullwidth" src="imgs/blumenhaus/blumgif.gif">
         <img class="fullwidth" id="blum-stack1" src="imgs/blumenhaus/2.png">
         <div class="threecol">
             <img id="blum1" src="imgs/blumenhaus/blum1.png">
