--- a/index.html
+++ b/index.html
@@ -256,8 +256,12 @@
             <img id="blum-web1" src="imgs/blumenhaus/9.png">
             <img id="blum-web2" src="imgs/blumenhaus/99.png">
         </div> -->
+        <div class="twocol">
+            <img src="imgs/blumenhaus/2.png">
+            <img src="imgs/blumenhaus/3.png">
+        </div>
         <img class="fullwidth" src="imgs/blumenhaus/blumgif.gif">
-        <img class="fullwidth" id="blum-stack1" src="imgs/blumenhaus/2.png">
+        <!-- <img class="fullwidth" id="blum-stack1" src="imgs/blumenhaus/2.png"> -->
         <div class="threecol">
             <img id="blum1" src="imgs/blumenhaus/blum1.png">
             <img id="blum2" src="imgs/blumenhaus/blum2.png">
@@ -269,7 +273,7 @@
             <img src="imgs/blumenhaus/cover.png">
         </div>
         <img class="fullwidth" id="blum-laptop" src="imgs/blumenhaus/laptop.gif">
-        <img class="fullwidth" id="blum-stack2" src="imgs/blumenhaus/3.png">
+        <!-- <img class="fullwidth" id="blum-stack2" src="imgs/blumenhaus/3.png"> -->
         <img class="fullwidth last" id="blum-icons" src="imgs/blumenhaus/8.png">
         <!-- <img class="fullwidth" id="blum-code" src="imgs/blumenhaus/10.png"> -->
         <!-- <button class="close">[HIDE DETAILS]</button> -->
