--- a/index.html
+++ b/index.html
@@ -272,9 +272,15 @@
         </div>
         <img class="fullwidth" id="blum-tote" src="imgs/blumenhaus/tote.png">
         <div class="twocol shirt">
-            <img src="imgs/blumenhaus/shirt2.png">
+            <img src="imgs/blumenhaus/shirt.png">
             <img src="imgs/blumenhaus/cover.png">
         </div>
+
+        <div class="twocol poster">
+            <img src="imgs/blumenhaus/blumboard.gif">
+            <img src="imgs/blumenhaus/poster.png">
+        </div>
+
         <img class="fullwidth" id="blum-laptop" src="imgs/blumenhaus/laptop.gif">
         <img class="fullwidth" id="blum-stack2" src="imgs/blumenhaus/3.png">
         <img class="fullwidth last" id="blum-icons" src="imgs/blumenhaus/8.png">
