--- a/index.html
+++ b/index.html
@@ -437,17 +437,45 @@
     </div>
 
     <div class="twocol seven">
-        <img src="imgs/stardew/web.gif">
+        <a id="starweb" href="https://kandd871.github.io/stardew/" target="_blank"><img src="imgs/stardew/web.gif"></a>
         <img src="imgs/stardew/13.png">
     </div>
     <!-- <img class="fullwidth" src="imgs/stardew/typeface.png"> -->
+
+    <div class="chars">
+        <span>a</span> <span>b</span> <span>c</span> <span>d</span> <span>e</span> <span>f</span> <span>g</span>
+        <span>h</span> <span>i</span> <span>j</span> <span>k</span> <span>l</span> <span>m</span> <span>n</span>
+        <span>o</span> <span>p</span> <span>q</span> <span>r</span> <span>s</span> <span>t</span> <span>u</span>
+        <span>v</span> <span>w</span> <span>x</span> <span>y</span> <span>z</span> 
+        <span>.</span> <span>!</span> <span>?</span> <span>,</span> <span>;</span> <span>:</span> <span>/</span>
+        <span>'</span><span>"</span><span>-</span> <span>–</span> 
+      </div>
+
+      <div class="tester">
+      <div class="inputs">
+        <input type="range" min="0" max="100" value="50" id="slider" class='slider'>
+        <input type="range" min="0" max="100" value="50" id="slider2" class='slider'>
+        <input type="color" id="head" name="head" value="#3b2b2b" />
+        <input type="color" id="stroke" name="head" value="#33899e" />
+        <input type="color" id="gradient" name="head" value="#ed26ff"/>
+        </div>
+      <p 
+      id="text" 
+      contenteditable="true" 
+      role="textbox" 
+      aria-multiline="true" 
+      aria-label="Editable paragraph"
+      spellcheck="false"
+    >
+    </p></div>
+
     <div class="sixcol">
-            <img src="imgs/stardew/4.png">
-            <img src="imgs/stardew/6.png">
-            <img src="imgs/stardew/5.png">
-            <img src="imgs/stardew/7.png">
-            <img src="imgs/stardew/9.png">
-            <img src="imgs/stardew/10.png">
+        <img src="imgs/stardew/4.png">
+        <img src="imgs/stardew/6.png">
+        <img src="imgs/stardew/5.png">
+        <img src="imgs/stardew/7.png">
+        <img src="imgs/stardew/9.png">
+        <img src="imgs/stardew/10.png">
     </div>
 
     <div class="twocol">
@@ -466,9 +494,8 @@
         <img src="imgs/stardew/15.png">
     </div>
 
-    <img class="fullwidth" src="imgs/stardew/16.png">
-
-    <img class="fullwidth last" src="imgs/stardew/posters.png">
+    <img class="fullwidth" src="imgs/stardew/blossomfest.png">
+    <img class="fullwidth last" src="imgs/stardew/16.png">
     <!-- <button class="close">[HIDE DETAILS]</button> -->
 </div>
 </div>
@@ -731,5 +758,6 @@
     <span id="copy">ALL WORK ON SITE © Drithi Kandoor 2024, drithikandoor@gmail.com</span>
 </div>
 <script src="main.js"></script>
+<script src="main1.js"></script>
 </body>
 </html>
