--- a/index.html
+++ b/index.html
@@ -483,19 +483,15 @@
         <img src="imgs/stardew/1.png">
     </div>
 
-    <div class="twocol five">
-        <img src="imgs/stardew/3.png">
-        <img src="imgs/stardew/12.png">
-    </div>
-
-
-    <div class="twocol eight">
-        <img src="imgs/stardew/14.png">
-        <img src="imgs/stardew/15.png">
-    </div>
-
+    <img class="fullwidth" src="imgs/stardew/14.png">
     <img class="fullwidth" src="imgs/stardew/blossomfest.png">
-    <img class="fullwidth last" src="imgs/stardew/16.png">
+    <img class="fullwidth" src="imgs/stardew/12.png">
+
+    <div class="twocol eight last">
+        <img src="imgs/stardew/16.png">
+        <img id="pls" src="imgs/stardew/15.png">
+    </div>
+
     <!-- <button class="close">[HIDE DETAILS]</button> -->
 </div>
 </div>
