--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="grid-item" id="to-revisit">
             <div class="thumbnail">
                 <!-- <a href="to-revisit/index.html" > -->
-                    <a href="https://kandd871.github.io/to-revisit/" target="_blank">
-                    <img class="image" src="imgs/revisit.gif">
+                    <a href="to-revisit/index.html">
+                    <img class="image" src="imgs/revisit/revisit.gif">
                     <div class="hover">
                         <span class="circle">
                         <span class="text">
