--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <span class="circle">
                         <span class="text">
                         To Revisit:<Br>
-                        <span class="skill">creative coding, web design, data visualization</span>
+                        <span class="skill">creative coding, data viz, web design</span>
                         </span>
                         </span>
                     </div> 
