--- a/blumenhaus/index.html
+++ b/blumenhaus/index.html
@@ -29,9 +29,9 @@
             Under → Talia Cotton
         </div>
         <span class="anchor"><a href="https://kandd871.github.io/logo-redesign/" target="_blank">See it Blooming Live! ↗</a></span><br>
-        <p>Blumenhaus Magazine is an annual botanical magazine from France. It focuses just as much on the aesthetic side as it does on its written content – described as "a luxurious hybrid of an art book & a magazine." 
-            I redesigned/enhanced the logo to evolve with time, reflecting everchanging nature. Using code to manipulate & visualize live data connected to two APIs – Garden API & Weather API – different illustrated 
-            flowers bloom every day according to the current season, humidity, & wind speed.</p>
+        <p><a href="https://www.blumenhaus-magazine.com/" target="_blank" class="link">Blumenhaus Magazine</a> is an annual botanical magazine from France. It focuses just as much on the aesthetic side as it does on its written content – described as "a luxurious hybrid of an art book & a magazine." 
+            I redesigned/enhanced the logo to <i>evolve with time</i>, reflecting everchanging nature. Using code to manipulate & visualize live data connected to two APIs – Garden API & Weather API – different illustrated 
+            flowers bloom every day according to the current <i>season, humidity, & wind speed.</i></p>
          </div>
         </div>
     </div>
@@ -65,6 +65,12 @@
                 <div class="two">
                     <img src="../imgs/blumenhaus/shirt.png"/>
                     <img src="../imgs/blumenhaus/cover.png"/>
+                </div>
+            </div>
+            <div class="full">
+                <div class="two twoo">
+                    <img src="../imgs/blumenhaus/blumboard.gif">
+                    <img src="../imgs/blumenhaus/poster.png">
                 </div>
             </div>
             <div class="full">
