--- a/chamberlain-coffee/index.html
+++ b/chamberlain-coffee/index.html
@@ -29,8 +29,8 @@
             Under → Talia Cotton
         </div>
         <span class="anchor"><a href="https://kandd871.github.io/chamberlain-generator/" target="_blank">Make Your Own Blend! ↗</a></span><br>
-        <p>An automated packaging system for visualizing both definite & sensory data for Chamberlain Coffee blends. Data corresponding to the predefined fields is inputted into a Google Sheets document, which determines the visuals of the newest flavor’s packaging. 
-            This data-driven design is instantly generated & added to a live website of the blends collection.</p>
+        <p>An <i>automated packaging system</i> for visualizing both <i>definite & sensory</i> data for <a  class="link" href="https://chamberlaincoffee.com/" target="_blank">Chamberlain Coffee</a> blends. Data corresponding to the predefined fields is inputted into a Google Sheets document, which determines the visuals of the newest flavor’s packaging. 
+            This data-driven design is <i>instantly generated & added</i> to a live website of the blends collection.</p>
          </div>
         </div>
     </div>
