--- a/editorial-illustration/index.html
+++ b/editorial-illustration/index.html
@@ -30,8 +30,8 @@
         </div>
         <a href="https://kandd871.github.io/editorial-illustration/" target="_blank"> <span class="anchor">Visit the Website ↗</span></a><br>
         <p>An editorial illlustration made through HTML, CSS, & Javascript for an article about Hot Wheels cars, published by the Washington Post. 
-            The writer talks about how the bottom of Hot Wheels cars tells you about the economy since it shows you where and when they were manufactured. 
-            By sourcing Hot Wheels cars from eBay, the illlustration invites the user to examine the bottom of the cars in a playful way.
+            The writer talks about how the <i>bottom of Hot Wheels cars</i> tells you about the economy since it shows you where and when they were manufactured. 
+            By sourcing Hot Wheels cars from eBay, the illlustration invites the user to <i>examine</i> the bottom of the cars in a playful way.
         </p>
          </div>
         </div>
