--- a/home-book/index.html
+++ b/home-book/index.html
@@ -30,7 +30,7 @@
         </div>
         <span class="anchor">8 x 10 inches</span><br>
         <p>A 20-page book about home, using the content of a box mailed to me from back home in India. 
-            Designed in the form of an inventory, each item appears as though being placed through a baggage scanner, accompanied by personalized texts & information.</p>
+            Designed in the form of an inventory, each item appears as though being placed through a <i>baggage scanner</i>, accompanied by personalized texts & information.</p>
          </div>
         </div>
     </div>
