--- a/info/index.html
+++ b/info/index.html
@@ -23,11 +23,11 @@
         <div class="grid-item">
             <p>
                 What blurs the line between digital & analog? I’m a multidisciplinary graphic designer, coder & artist from Bangalore, based in New York City. 
-                I’m currently a senior in the BFA Communication Design program at Parsons School of Design. My work revolves around exploring how interaction influences narrative.
+                I’m currently a senior in the BFA Communication Design program at Parsons School of Design. My work revolves around <i>exploring how interaction influences narrative.</i>
             </p>
             <p>
                 From a very young age, I’ve had a passion for both science and art. My educational background until coming to college was completely STEM-based. Coding came naturally to me as I took it through high school, while art was purely a hobby. 
-                As for design, I didn’t even know how to use Photoshop until my senior year! Design is my perfect middle ground, allowing me to create innovative & analytic work. 
+                As for design, I didn’t even know how to use Photoshop until my senior year! Design is my perfect middle ground, allowing me to create <i>innovative & analytic</i> work. 
             </p>
             <p>
                 Reflective of my non-conventional advent into design, I’m interested in breaking conventions & creating non-traditional work. When I'm not designing, you can find me either
@@ -35,7 +35,7 @@
             </p>
         </div>
         <div class="grid-item">
-        <p>
+        <p class="contact">
             <a href="mailto:drithikandoor@gmail.com">drithikandoor@gmail.com</a><br>
             <a href="https://www.linkedin.com/in/drithi-kandoor/" target="_blank">Linkedin</a> / 
             <a href="https://www.instagram.com/drithii" target="_blank">Instagram</a> /  
@@ -45,7 +45,7 @@
     </div>
 
     <div class="grid-column">
-        <div class="grid-item">
+        <div class="grid-item exp">
             <u>AIGA@TNS</u><br>
             <span class="loc">New York, USA</span><br>
             <i>(2023–present)</i><br>
