--- a/macbook/index.html
+++ b/macbook/index.html
@@ -29,8 +29,8 @@
             Under → Natasha Chandani
         </div>
         <a href="https://kandd871.github.io/escapism-github.io/" target="_blank"> <span class="anchor">Visit the Website ↗</span></a><br>
-        <p>This laptop-sized book is meant to explore escapism in a digital setting & simulate the act of being immersed on the web through "tabs", emojis, and other techniques. Inspired by Reddit, I created 
-            n internet-driven experience which allows you to escape your reality by browsing other people’s realities. The website documented throughout the book is fully functional & coded by me.
+        <p>This <i>laptop-sized book</i> is meant to explore escapism in a digital setting & simulate the act of being immersed on the web through "tabs", emojis, and other techniques. <i>Inspired by Reddit</i>, I created 
+            an internet-driven experience which allows you to escape your reality by <i>browsing other people’s realities</i>. The website documented throughout the book is fully functional & coded by me.
         </p>
          </div>
         </div>
