--- a/mutated-odyssey/index.html
+++ b/mutated-odyssey/index.html
@@ -29,9 +29,9 @@
             Under → Claudia Brandenburg
         </div>
         <span class="anchor">Includes 4½ x 10½ in. Catalog</span><br>
-        <p>Catalog design & branding for an imaginary exhibition for the artist Rajni Perera at Karma Gallery, NYC. The catalog can be flipped & read either way – 
-            one side tells you about the artist & the other tells you about the exhibition. The duality of the orientation & colors represents the duality & experimentation shown in her work &
-             the typography reflects the theme of science fiction which she uses a source of inspiration.
+        <p>Catalog design & branding for an imaginary exhibition for the artist Rajni Perera at Karma Gallery, NYC. The catalog can be <i>flipped & read either way</i> – 
+            one side tells you about the artist & the other tells you about the exhibition. The <i>duality</i> of the orientation & colors represents the duality & experimentation shown in her work &
+            the typography reflects the theme of science fiction which she uses a source of inspiration.
         </p>
          </div>
         </div>
