--- a/stardew/index.html
+++ b/stardew/index.html
@@ -29,8 +29,8 @@
             Under → Tobias Holzmann
         </div>
         <span class="anchor"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it Out! ↗</a></span><br>
-        <p>Stardew is a bitmap variable display serif made using Glyphs. It was born from a curiosity about combining traditional design with technology, aiming to create an interplay between pixel & serif typography. 
-            Interested in how a grid & symbol could reimagine the nature of serifs and create a visual narrative, Stardew uses a flower-like pixel to form its characters. The typeface comes with different weights & widths that resemble flowers blooming.
+        <p>Stardew is a <i>bitmap variable display serif</i> made using Glyphs. It was born from a curiosity about combining traditional design with technology, aiming to create an <i>interplay</i> between pixel & serif typography. 
+            Interested in how a grid & symbol could reimagine the nature of serifs and create a visual narrative, Stardew uses a <i>flower-like pixel</i> to form its characters. The typeface comes with different weights & widths that resemble flowers <i>blooming.</i>
         </p>
          </div>
         </div>
