--- a/weaving/index.html
+++ b/weaving/index.html
@@ -29,9 +29,9 @@
             Under → Talia Cotton
         </div>
         <span class="anchor"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add Your Weave! ↗</a></span><br>
-        <p>Weaving Abstraction in Ancient and Modern Art is an exhibition at the Met displaying textiles spanning not only centuries, but continents. 
-            The unique textiles are brought together through the use of similar colors, materials, grids, and techniques. By identifying the fundamental form of patterns & shapes in weaving and translating 
-            them into ASCII symbols, a custom type has been designed through code. Visitors of the exhibition or website would be prompted to add their own data-driven symbol to the communal weave, leaving their mark on the typography. Uses firebase!
+        <p><a class="link" href="https://www.metmuseum.org/exhibitions/weaving-abstraction-in-ancient-and-modern-art" target="_blank">Weaving Abstraction in Ancient and Modern Art</a> is an exhibition at the Met displaying textiles spanning not only centuries, but continents. 
+            The unique textiles are brought together through the use of similar colors, materials, grids, and techniques. By identifying the <i>fundamental form of patterns & shapes</i> in weaving and translating 
+            them into ASCII symbols, a <i>custom type has been designed through code</i>. Visitors of the exhibition or website would be prompted to add their own data-driven symbol to the <i>communal weave</i>, leaving their mark on the typography. Uses firebase!
         </p>
          </div>
         </div>
