--- a/aiga-first-things-first/index.html
+++ b/aiga-first-things-first/index.html
@@ -32,8 +32,8 @@
         </div>
         <span class="anchor">5 x 7 inches</span><br>
         <p>An 8-page booklet for the AIGA exhibition titled First Things First, Second, and Third: a manifesto renewal, serving as an informational program for persons attending the exhibit. 
-            The booklet is printed using a risograph to invoke the feeling of something designed traditionally & with greater purpose than a corporate printer. It is made to feel personal through 
-            hand-drawn arrows & highlighted parts while signatures are placed in a more organic way.</p>
+            The booklet is printed using a risograph to invoke the feeling of something designed <i>traditionally</i> & with greater purpose than a corporate printer. It is made to feel personal through 
+            hand-drawn arrows & highlighted parts while signatures are placed in a <i>more organic way.</i></p>
          </div>
         </div>
     </div>
