--- a/to-revisit/index.html
+++ b/to-revisit/index.html
@@ -31,7 +31,7 @@
         <span class="anchor"><a href="https://kandd871.github.io/to-revisit/" target="_blank">Play ↗</a></span><br>
         <p>
         A curated & coded project that delves into the concept of image revisitation, exploring why we return to certain images and what this reveals us.  
-        Presented as a live visual database, the project allows you to interact with and explore images personally saved by one original individual across four different sources, 
+        Presented as a <i>live visual database</i>, the project allows you to interact with and explore images personally saved by one original individual across four different sources, 
       all intended for revisitation. <i>The more opaque an image, the more it has been communally visited.</i><br>
       <Br>
         </p>
