--- a/mutated-odyssey/index.html
+++ b/mutated-odyssey/index.html
@@ -44,7 +44,7 @@
               <img src="../imgs/mutated/cover2.gif">
             </div>
             <div class="full">
-                <img src="../imgs/mutated/web.gif">
+                <img class="flip" src="../imgs/mutated/web.gif">
             </div>
             <div class="full">
                 <img src="../imgs/mutated/banner.png">
