--- a/info/index.html
+++ b/info/index.html
@@ -46,6 +46,16 @@
 
     <div class="grid-column">
         <div class="grid-item exp">
+            <u>ALMA Communications</u><br>
+            <span class="loc">New York, USA</span><br>
+            <i>(2024–present)</i><br>
+            Junior Designer<br>
+            <br>
+            <u>Parsons School of Design</u><br>
+            <span class="loc">New York, USA</span><br>
+            <i>(2024–present)</i><br>
+            Research Assistant to Juliette Cezzar<br>
+            <br>
             <u>AIGA@TNS</u><br>
             <span class="loc">New York, USA</span><br>
             <i>(2023–present)</i><br>
@@ -61,16 +71,7 @@
             <i>(2020–present)</i><br>
             Graphic Designer<br>
             <br>
-            <u>Nikkibuild</u><br>
-            <span class="loc">Bangalore, India</span><br>
-            <i>(2022)</i><br>
-            Illustrator<br>
-            <br>
-            <u>Karunashraya</u><br>
-            <span class="loc">Bangalore, India</span><br>
-            <i>(2019–2021)</i><br>
-            Art & Design Volunteer<br>
-                          
+            <br>      
         </div>
     </div>
 
